site/content/docs/v0.7.1/cli-reference/ark_client_config_get.md
---
title: "ark client config get"
layout: docs
---

Get client configuration file values

### Synopsis


Get client configuration file values

```
ark client config get [KEY 1] [KEY 2] [...] [flags]
```

### Options

```
  -h, --help   help for get
```

### Options inherited from parent commands

```
      --alsologtostderr                  log to standard error as well as files
      --kubeconfig string                Path to the kubeconfig file to use to talk to the Kubernetes apiserver. If unset, try the environment variable KUBECONFIG, as well as in-cluster configuration
      --log_backtrace_at traceLocation   when logging hits line file:N, emit a stack trace (default :0)
      --log_dir string                   If non-empty, write log files in this directory
      --logtostderr                      log to standard error instead of files
  -n, --namespace string                 The namespace in which Ark should operate (default "heptio-ark")
      --stderrthreshold severity         logs at or above this threshold go to stderr (default 2)
  -v, --v Level                          log level for V logs
      --vmodule moduleSpec               comma-separated list of pattern=N settings for file-filtered logging
```

### SEE ALSO
* [ark client config](ark_client_config.md)	 - Get and set client configuration file values

